# plas

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  TODO.md  todo.md
.claude/: settings.local.json
apps/: CMakeLists.txt
cmake/: FindAardvark.cmake  FindFT4222H.cmake  (+6 more)
components/plas-bootstrap/: CMakeLists.txt
components/plas-bootstrap/include/plas/bootstrap/: bootstrap.h
components/plas-bootstrap/src/bootstrap/: bootstrap.cpp
components/plas-configspec/: CMakeLists.txt
components/plas-configspec/include/plas/configspec/: spec_registry.h  validation_result.h  validator.h
components/plas-configspec/schemas/: aardvark.schema.yaml  device_config.schema.yaml  ft4222h.schema.yaml  pciutils.schema.yaml  pmu3.schema.yaml  pmu4.schema.yaml
components/plas-configspec/src/configspec/: builtin_schemas.cpp.in  spec_registry.cpp  spec_registry_internal.h  validator.cpp
components/plas-core/: CMakeLists.txt
components/plas-core/include/plas/backend/driver/aardvark/: aardvark_device.h
components/plas-core/include/plas/backend/driver/ft4222h/: ft4222h_device.h
components/plas-core/include/plas/backend/driver/pmu3/: pmu3_device.h
components/plas-core/include/plas/backend/driver/pmu4/: pmu4_device.h
components/plas-core/include/plas/backend/interface/: device.h  device_factory.h  i2c.h  i3c.h  power_control.h  serial.h  ssd_gpio.h  uart.h
components/plas-core/include/plas/backend/interface/pci/: pci_config.h  pci_doe.h  types.h
components/plas-core/include/plas/config/: config.h  config_format.h  config_node.h  device_entry.h  property_manager.h
components/plas-core/include/plas/core/: byte_buffer.h  error.h  properties.h  result.h  types.h  units.h  version.h
components/plas-core/include/plas/hal/: device_manager.h
components/plas-core/include/plas/hal/interface/: device.h  device_factory.h  i2c.h  i3c.h  power_control.h  serial.h  ssd_gpio.h  uart.h
components/plas-core/include/plas/hal/interface/pci/: cxl.h  cxl_mailbox.h  cxl_types.h  pci_bar.h  pci_config.h  pci_device.h  pci_doe.h  pci_topology.h  types.h
components/plas-core/include/plas/log/: log_config.h  log_level.h  logger.h
components/plas-core/src/backend/driver/aardvark/: aardvark_device.cpp
components/plas-core/src/backend/driver/ft4222h/: ft4222h_device.cpp
components/plas-core/src/backend/driver/pmu3/: pmu3_device.cpp
components/plas-core/src/backend/driver/pmu4/: pmu4_device.cpp
components/plas-core/src/backend/interface/: device_factory.cpp
components/plas-core/src/config/: config.cpp  config_node.cpp  config_node_internal.h  device_parser.cpp  device_parser.h  json_parser.cpp  json_parser.h  json_property_parser.cpp  json_property_parser.h  property_manager.cpp  yaml_parser.cpp  yaml_parser.h  yaml_property_parser.cpp  yaml_property_parser.h  yaml_to_json.cpp  yaml_to_json.h
components/plas-core/src/core/: byte_buffer.cpp  error.cpp  properties.cpp  version.cpp
components/plas-core/src/hal/: device_manager.cpp
components/plas-core/src/hal/interface/: device_factory.cpp
components/plas-core/src/hal/interface/pci/: pci_device.cpp  pci_topology.cpp
components/plas-core/src/log/: logger.cpp
components/plas-core/src/log/backends/: spdlog_backend.cpp  spdlog_backend.h
components/plas-drivers/: CMakeLists.txt
components/plas-drivers/include/plas/hal/driver/aardvark/: aardvark_device.h
components/plas-drivers/include/plas/hal/driver/ft4222h/: ft4222h_device.h
components/plas-drivers/include/plas/hal/driver/pciutils/: pciutils_device.h
components/plas-drivers/include/plas/hal/driver/pmu3/: pmu3_device.h
components/plas-drivers/include/plas/hal/driver/pmu4/: pmu4_device.h
components/plas-drivers/src/hal/driver/aardvark/: aardvark_device.cpp
components/plas-drivers/src/hal/driver/ft4222h/: ft4222h_device.cpp
components/plas-drivers/src/hal/driver/pciutils/: pciutils_device.cpp
components/plas-drivers/src/hal/driver/pmu3/: pmu3_device.cpp
components/plas-drivers/src/hal/driver/pmu4/: pmu4_device.cpp
examples/config/: CMakeLists.txt  config_load.cpp  config_node_tree.cpp  property_manager.cpp
examples/config/fixtures/: devices_grouped.yaml  shared_config.yaml  test_params.yaml
tests/: CMakeLists.txt
tests/backend/interface/: mock_device.h  test_device_factory.cpp
tests/backend/interface/pci/: test_pci_config.cpp  test_pci_doe.cpp  test_pci_types.cpp
tests/bootstrap/: test_bootstrap.cpp
tests/bootstrap/fixtures/: basic_config.yaml  bootstrap_bad_uri_format_config.yaml  bootstrap_invalid_uri_config.yaml  bootstrap_properties_config.yaml  bootstrap_unknown_driver_config.yaml  grouped_config.yaml
tests/config/: test_config_errors.cpp  test_config_json.cpp  test_config_node.cpp  test_config_yaml.cpp  test_property_manager.cpp
tests/config/fixtures/: grouped_config.json  grouped_config.yaml  invalid.yaml  multi_session.json  multi_session.yaml  nested_config.json  nested_config.yaml  scalar_top.yaml  single_session.json  test_config.json  types_test.json  types_test.yaml
tests/configspec/: test_spec_registry.cpp  test_validation_result.cpp  test_validator.cpp
tests/configspec/fixtures/: invalid_unknown_arg.yaml  valid_flat.yaml
tests/core/: test_byte_buffer.cpp  test_error.cpp  test_properties.cpp  test_result.cpp  test_units.cpp  test_version.cpp
tests/hal/: test_device_manager.cpp
tests/hal/driver/: test_aardvark_device.cpp  test_aardvark_integration.cpp  test_ft4222h_device.cpp  test_ft4222h_integration.cpp  test_pciutils_device.cpp  test_pciutils_integration.cpp
tests/hal/fixtures/: device_manager_duplicate.json  device_manager_grouped.json  device_manager_grouped.yaml  device_manager_nested.yaml  device_manager_test.yaml  device_manager_unknown_driver.json
tests/hal/interface/: mock_device.h  test_device_factory.cpp  test_device_lifecycle.cpp
tests/hal/interface/pci/: test_cxl.cpp  test_cxl_mailbox.cpp  test_cxl_types.cpp  test_pci_bar.cpp  test_pci_config.cpp  test_pci_device.cpp  test_pci_doe.cpp  test_pci_topology.cpp  test_pci_topology_integration.cpp  test_pci_types.cpp
tests/log/: test_logger.cpp
(+17 files in other folders)
